--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
   "homepage": "https://github.com/duncanpharvey/zendesk-training-queue-notifications#readme",
   "dependencies": {
     "axios": "^0.21.1",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
-    "express-basic-auth": "^1.2.0"
+    "qs": "^6.9.6"
   },
   "devDependencies": {
     "dotenv": "^8.2.0"
