adds environment setup script and pm2 command

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "dev": "node -r dotenv/config server.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "daemon": "pm2 start server.js"
   },
   "repository": {
     "type": "git",
